# city-parking-cpp

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.json  docker-compose.yml
src/: Config.cpp  Config.h  ILogger.cpp  Main.cpp
src/anpr/: DetectionNCNN.cpp  DetectionNCNN.h  LPRecognizerNCNN.h
src/app/: CalibParams.cpp  CalibParams.h  CalibParamsUpdater.h  Car.cpp  Car.h  CarTracker.cpp  CarTracker.h  Constants.h  FrameProcessor.cpp  FrameProcessor.h  LicensePlate.cpp  LicensePlate.h  Package.cpp  Package.h  PackageSender.cpp  PackageSender.h  TemplateMatching.h  Utils.cpp
src/client/: CameraClientLauncher.cpp  CameraClientLauncher.h  FrameData.cpp  GstreamerReader.cpp  GstreamerReader.h
